--- a/index.css
+++ b/index.css
@@ -6,6 +6,16 @@ ion-select {
     width: 100%;
 }
 
+ion-button {
+    height: 56px;
+    font-size: 20px;
+    font-weight: bold;
+}
+ion-button:active {
+    opacity: 0.6 !important;
+}
+
+
 
 :root {
     /** primary **/
@@ -13,16 +23,16 @@ ion-select {
     --ion-color-primary-rgb: 2,136,209;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255,255,255;
-    --ion-color-primary-shade: #0278b8;
-    --ion-color-primary-tint: #1b94d6;
+    --ion-color-primary-shade: #7ed445;
+    --ion-color-primary-tint: #7ed445;
   
     /** secondary **/
-    --ion-color-secondary: #0cd1e8;
+    --ion-color-secondary: #D8F2C7;
     --ion-color-secondary-rgb: 12, 209, 232;
     --ion-color-secondary-contrast: #ffffff;
     --ion-color-secondary-contrast-rgb: 255, 255, 255;
-    --ion-color-secondary-shade: #0bb8cc;
-    --ion-color-secondary-tint: #24d6ea;
+    --ion-color-secondary-shade: #D8F2C7;
+    --ion-color-secondary-tint: #D8F2C7;
   
     /** tertiary **/
     --ion-color-tertiary: #7044ff;
