gtm and change router.push with <Link>

--- a/index.css
+++ b/index.css
@@ -6,6 +6,10 @@ ion-select {
     width: 100%;
 }
 
+a {
+    cursor: pointer !important;
+}
+
 ion-button {
     height: 56px;
     font-size: 20px;
