--- a/index.css
+++ b/index.css
@@ -24,9 +24,12 @@ body {
     background-color: #edfee2;
 }
 
+ion-app {
+    background-color: white;
+}
+
 @media screen and (min-width: 700px) {
     ion-app {
-        background-color: white;
         max-width: 700px;
         top: 0 !important;
         height: 100vh !important;
@@ -35,7 +38,6 @@ body {
         /* position: relative;
        left: 50%; */
        transform: translateX(-50%) !important;
-    
     }
 }
 
