--- a/index.css
+++ b/index.css
@@ -11,6 +11,11 @@ a {
     text-decoration: none;
 }
 
+a ion-item:hover {
+    background: #e5e5e5 !important;
+    --background: #e5e5e5 !important;
+}
+
 ion-button {
     height: 56px;
     font-size: 20px;
@@ -21,7 +26,7 @@ ion-button:active {
 }
 
 body {
-    background-color: #edfee2;
+    background-color: #D8F2C7;
 }
 
 ion-app {
