--- a/index.css
+++ b/index.css
@@ -35,7 +35,9 @@ ion-app {
 
 @media screen and (min-width: 700px) {
     ion-app {
-        max-width: 700px;
+        /* max-width: 700px; */
+        max-width: 600px;
+        border-radius: 12px;
         top: 0 !important;
         height: 100vh !important;
         position: absolute !important;
