--- a/index.css
+++ b/index.css
@@ -11,10 +11,10 @@ a {
     text-decoration: none;
 }
 
-a ion-item:hover {
+/* a ion-item:hover {
     background: #e5e5e5 !important;
     --background: #e5e5e5 !important;
-}
+} */
 
 ion-button {
     height: 56px;
